fix:Remove the hidden by default to the comment section for testing purposes

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -68,7 +68,6 @@ button:focus-visible {
 }
 #comments {
   margin: 0 2rem;
-  display: none;
   p {
     background-color: white;
     color: red;
